# hackathonTJBA

./: README.md  conversao-voz.py  docker-compose.num  docker-compose.yml  docker-compose.yml.__num  scaffold_fastapi.py  temp_final_prompt_copy.txt  tmp_dockerfile_dump.txt
backend/: .env.example  Dockerfile  Makefile  README_CONVERSAS.md  README_TWO_STEPS.md  pyproject.toml
backend-fastapi/: .gitignore  Dockerfile  README.md  README_CONVERSAS.md  README_TWO_STEPS.md  alembic.ini  docker-compose.yml  pyproject.toml
backend-fastapi/alembic/: env.py
backend-fastapi/alembic/versions/: 0001_guest_user.py
backend-fastapi/app/: main.py
backend-fastapi/app/api/: deps.py
backend-fastapi/app/api/v1/routes/: chat.py  conversations.py  users.py
backend-fastapi/app/core/: config.py  logging.py
backend-fastapi/app/db/: base.py  session.py
backend-fastapi/app/models/: conversation.py  user.py
backend-fastapi/app/schemas/: agent.py  conversation.py  user.py
backend-fastapi/app/services/: final_prompt.py  legal_agent.py  user_service.py
backend-fastapi/app/tests/: test_health.py
backend-fastapi/know_base/: lei_14532.json  lei_7716.json
backend/alembic/versions/: 0002_conversations_messages.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: __init__.py  conversation_service.py  final_prompt.py  legal_agent.py  speech_to_text.py  (+3 more)
backend/know_base/: lei_12288.json
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  image.d.ts  index.css
(+17 files in other folders)
